reduce column width to prevent unwanted wrapping

--- a/elements/core-doc-page.css
+++ b/elements/core-doc-page.css
@@ -77,7 +77,7 @@ pre code {
 .details-name {
   display: inline-block; 
   vertical-align: top;
-  width: 220px;
+  width: 190px;
 }
 
 .details-info {
